<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:id="@+id/button"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:onClick="onClickButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_service"
        android:id="@+id/button2"
        android:layout_marginTop="33dp"
        android:singleLine="false"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="onClickButton2"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_sensor_data"
        android:id="@+id/checkBox"
        android:layout_below="@+id/button2"
        android:layout_marginTop="60dp"
        android:onClick="onClickCheckBox"
        android:enabled="true"
        android:checked="false"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button2"
        android:id="@+id/sensorPane"
        android:visibility="invisible"
        android:layout_below="@+id/checkBox"
        android:background="#ffffe7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="false"
            android:layout_toRightOf="@+id/textView4"
            android:width="100dp"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:text="0.0"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView2"
            android:layout_alignLeft="@+id/textView"
            android:width="100dp"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/textView5"
            android:text="0.0"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:layout_alignParentBottom="false"
            android:layout_alignLeft="@+id/textView2"
            android:width="100dp"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/textView6"
            android:text="0.0"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="X:"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Y:"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Z:"
            android:id="@+id/textView6"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</RelativeLayout>
